--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "express-fileupload": "^1.5.0",
     "express-flash": "^0.0.2",
     "express-session": "^1.18.0",
+    "filebuffer": "^1.0.5",
     "flash": "^1.1.0",
+    "imgur": "^2.4.2",
     "mongo": "^0.1.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "postman": "^0.2.0"
