--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "postman": "^0.2.0"
+    "postman": "^0.2.0",
+    "socket.io": "^4.7.5",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
