--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@geoapify/geocoder-autocomplete": "^2.0.1",
     "axios": "^1.6.8",
     "bad-words": "^3.0.4",
     "bcrypt": "^5.1.1",
@@ -29,6 +30,7 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
+    "node-geocoder": "^4.3.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "postman": "^0.2.0",
